bugfix size of cropper

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -1639,7 +1639,7 @@ body.rtl .poll-panel{right:16px;left:auto}
 .ultra.multi-line{height:75px}
 .ultra .data{-webkit-box-flex:1;-ms-flex:1;-webkit-flex:1;-moz-box-flex:1;flex:1}
 .ultra .preview{max-height:75px;max-width:85px;z-index: 12;}
-.ultra .preview img{width:75px;height:75px;min-width:75px;max-height:75px;margin-left:5px}
+.ultra .preview img{width:75px;min-width:75px;max-height:75px;margin-left:5px}
 .rtl .ultra .preview img{margin-left:0;margin-right:5px}
 .ultra .element{margin-bottom:5px}
 
